--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
+    "build:dev": "nx run tp-movies:build:development",
     "test": "nx test"
   },
   "private": true,
@@ -13,10 +14,14 @@
     "@angular/common": "~15.2.0",
     "@angular/compiler": "~15.2.0",
     "@angular/core": "~15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "~15.2.0",
+    "@angular/material": "^15.2.1",
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
+    "@angular/pwa": "^15.2.1",
     "@angular/router": "~15.2.0",
+    "@angular/service-worker": "~15.2.0",
     "@nrwl/angular": "15.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
