--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/pwa": "^15.2.1",
     "@angular/router": "~15.2.0",
-    "@angular/service-worker": "~15.2.0",
+    "@angular/service-worker": "^15.2.3",
     "@nrwl/angular": "15.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
