--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/pwa": "^15.2.1",
     "@angular/router": "~15.2.0",
     "@angular/service-worker": "~15.2.0",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "@nrwl/angular": "15.8.1",
+    "immer": "^9.0.19",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
